# mbqc-classical-control-study

./: .gitignore  README.md
research/mbqc_ff_evaluator/: README.md  pyproject.toml
research/mbqc_ff_evaluator/results/raw/: QAOA_H10_Q100_seed0.json  QAOA_H10_Q100_seed1.json  QAOA_H10_Q100_seed2.json  QAOA_H10_Q36_seed0.json  QAOA_H10_Q36_seed1.json  QAOA_H10_Q36_seed2.json  QAOA_H10_Q36_seed3.json  QAOA_H10_Q36_seed4.json  QAOA_H10_Q64_seed1.json  QAOA_H10_Q64_seed2.json  QAOA_H10_Q64_seed4.json  QAOA_H12_Q64_seed1.json  QAOA_H12_Q64_seed2.json  QAOA_H4_Q16_seed0.json  QAOA_H4_Q16_seed1.json  QAOA_H4_Q16_seed2.json  QAOA_H4_Q16_seed3.json  QAOA_H4_Q16_seed4.json  QAOA_H6_Q36_seed0.json  QAOA_H6_Q36_seed1.json  QAOA_H6_Q36_seed2.json  QAOA_H6_Q36_seed3.json  QAOA_H6_Q36_seed4.json  QAOA_H6_Q36_seed5.json  QAOA_H6_Q36_seed6.json  QAOA_H6_Q36_seed7.json  QAOA_H6_Q36_seed9.json  QAOA_H8_Q16_seed2.json  QAOA_H8_Q16_seed3.json  QAOA_H8_Q16_seed4.json  QAOA_H8_Q36_seed0.json  QAOA_H8_Q36_seed2.json  QAOA_H8_Q64_seed0.json  QAOA_H8_Q64_seed2.json  QAOA_H8_Q64_seed3.json  QFT_H4_Q16_seed0.json  QFT_H4_Q16_seed2.json  QFT_H4_Q16_seed4.json  QFT_H6_Q36_seed1.json  QFT_H6_Q36_seed2.json  (+16 more)
research/mbqc_ff_evaluator/results/studies/: README.md
research/mbqc_ff_evaluator/results/summary/: budgets.csv  controller_budget_eval.csv  metrics.csv
research/mbqc_ff_evaluator/src/mbqc_ff_evaluator/: __init__.py
research/mbqc_ff_evaluator/src/mbqc_ff_evaluator/adapters/: __init__.py  csv_repository.py  graphix_translation.py  (+3 more)
research/mbqc_ff_evaluator/tests/: __init__.py  conftest.py  helpers.py  test_analysis_selection.py  test_backfill_shifted_graph.py  test_compute_budgets.py  test_controller_budget.py  test_graphix_reference.py  test_json_repository.py  test_oneadapt_backend.py  test_outliers.py  test_prepare_shifted_dag_study.py  test_smoke.py  test_sweep_bringup.py  test_sweep_main.py
research/mbqc_graph_compiler/: README.md  pyproject.toml
research/mbqc_graph_compiler/src/mbqc_graph_compiler/: __init__.py  circuit_constructors.py  dependency.py  graph_state.py  jcz_circuit.py  map_route.py  reduce_degree.py
research/mbqc_pipeline_sim/: README.md  pyproject.toml
research/mbqc_pipeline_sim/results/studies/: README.md
research/mbqc_pipeline_sim/results/summary/: aggregated_conservative_common.csv  aggregated_conservative_meas_common.csv  sweep.csv
research/mbqc_pipeline_sim/scripts/: run_w8_codesign_focus.ps1
research/mbqc_pipeline_sim/tests/: test_dag_analysis.py  test_plot.py  test_scheduler.py  test_shifted_study_analysis.py  test_simulator.py  test_sweep.py
(+517 files in other folders)
