[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "mbqc-graph-compiler"
version = "0.1.0"
description = "MBQC graph state compiler extracted from OneAdapt (JCZ model)"
requires-python = ">=3.10,<3.12"
dependencies = [
    "networkx>=3.0",
    "numpy>=1.24",
    "matplotlib>=3.7",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
